--- a/src/index20200625.html
+++ b/src/index20200625.html
@@ -6,11 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
     충돌사항 만들기 test
     tesing 입력
-=======
->>>>>>> 151a8b4a6d099b2d1d5c9f35fdb94712660b24af
     gitHub에서 수정 작업
+    
+    gitHub 작업 2
 </body>
 </html>
